[package]
name = "sel4_cspace"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
sel4_common = { git = "https://github.com/reL4team2/sel4_common.git", branch = "master" }
rel4-utils = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[features]
kernel_mcs = []
enable_smc = []
hypervisor = []
